system-components/pennyworth/kubernetes/base/deployment-alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holmes-alertmanager
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: holmes-alertmanager
  template:
    metadata:
      labels:
        app: holmes-alertmanager
    spec:
      containers:
        - name: holmes-alertmanager
          image: ghcr.io/panicboat/monorepo/holmes:latest
          imagePullPolicy: IfNotPresent
          command: ["/holmes-alertmanager"]
          ports:
            - containerPort: 8080
