system-components/pennyworth/kubernetes/base/deployment-slack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holmes-slack
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: holmes-slack
  template:
    metadata:
      labels:
        app: holmes-slack
    spec:
      containers:
        - name: holmes-slack
          image: ghcr.io/panicboat/monorepo/holmes:latest
          imagePullPolicy: IfNotPresent
          command: ["/holmes-slack"]
          ports:
            - containerPort: 8080
