system-components/pennyworth/kubernetes/base/service-alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: pennyworth-alertmanager
spec:
  selector:
    app: pennyworth-alertmanager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
