system-components/pennyworth/kubernetes/base/service-slack.yaml
apiVersion: v1
kind: Service
metadata:
  name: pennyworth-slack
spec:
  selector:
    app: pennyworth-slack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
